# tolkapy_webapp_new_ver1

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Progress.md  README.md  app.py  main.py  output.txt  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  requirements.txt:  unittest  visualization_module.py
