[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tolkapy"
authors = [
{name = "Dr.Sathiyaraj Thangasamy", email="sathiyarajt@skacas.ac.in"},
{name = "Parameshwar Arunachalam", email="parameshwar273@gmail.com"},
{name = "Boopalan S" , email="boopalan28012003@gmail.com"},
{name = "Hariharan Umapathi",email="smarthariharan28@gmail.com"},
{name = "Infofarmer",email="tha.uzhavan@gmail.com"},
{name = "Syed Jafer K",email="contact.syedjafer@gmail.com"},
{name = "Kamalakkannan P",email = "kkannan.ps.2004@gmail.com"}
]
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.0.3"
requires-python = ">=3.6"
dependencies = [
    "Open-Tamil >= 1.1",
    "tamilstring"
]

[tool.setuptools.packages.find]
where =["."]
include = ["tamilrulepy*"]

[project.license]
file = "LICENSE.md"

[tool.ruff]
target-version = "py310"
line-length = 88

lint.select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes (unused imports, unused variables, unused functions)
  "W",  # pycodestyle warnings
  "I",  # import sorting
  "UP", # pyupgrade
  "B",  # bugbear
]

lint.ignore = [
  "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["tamilrulepy"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
